Fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,7 @@ code {
   gap: 30px;
   height: 70vh;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .img__image-with-info {
